[package]
name = "ntex_ratelimiter"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[lib]
name = "ntex_ratelimiter"
path = "src/lib.rs"

[workspace]
members = [
    "examples/basic",
    "examples/trait-object"
]

[dependencies]
derive_more = "0.99.5"
fxhash = "0.2.1"
ntex = "0.1.17"
once_cell = "1.4.0"
parking_lot = "0.10.2"
tokio = { version = "0.2.20", default-features = false, features = ["time"] }